fix(ui): HorizontalBarChart - prevent content horizontal scroll

--- a/packages/ui/src/ui/horizontal-bar-chart/horizontal-bar-chart.module.css
+++ b/packages/ui/src/ui/horizontal-bar-chart/horizontal-bar-chart.module.css
@@ -3,6 +3,8 @@
   display: flex;
   align-items: stretch;
   justify-content: flex-start;
+  width: 100%;
+  overflow: hidden;
 }
 
 .item {
